--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="unityContainer" style="width: 300px; height: 600px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick= " unityInstance.SetFullscreen(1)" ></div>
+        <div class="fullscreen" onClick= " unityInstance.SetFullscreen(1)" ></div>
         <div class="title">Water Sort - Color Sorting</div>
       </div>
     </div>
