--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       console.log("hello")
         setTimeout(function() {
        unityInstance.SetFullscreen(1)
+          console.log("hello")
         }, 2500);
       
     </script>
