--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="unityContainer" style="width: 300px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onClick= " " ></div>
-        <div class="title">Water Sort - Color Sorting</div>
-      </div>
-    </div>
+      <div style="height:20px; width: %UNITY_WIDTH%px; background: green;" onclick="unityInstance.SetFullscreen(1)"><b>Click here to make it full screen.</b></div>
+    <div id="unityContainer" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px; margin: auto"></div>
+ 
   </body>
 </html>
