--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div style="height:20px; width: %UNITY_WIDTH%px; background: green;" onclick="unityInstance.SetFullscreen(1)"><b>Click here to make it full screen.</b></div>
-    <div id="unityContainer" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px; margin: auto"></div>
+    <div id="unityContainer" style="width: 300px; height: 600px; margin: auto"></div>
  
   </body>
 </html>
