--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       console.log("hello")
         setTimeout(function() {
        unityInstance.SetFullscreen(1)
-          console.log("hello")
+          console.log("time out function")
         }, 2500);
       
     </script>
