--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="webgl-content">
-    <div id="unityContainer" style="width: 300px; height: 600px; margin: auto"></div>
+    <div id="unityContainer" style="width: 300px; height: 600px;"></div>
  
   </body>
 </html>
