--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content">
-    <div id="unityContainer" style="width: 300px; height: 600px;"></div>
+      <div class="webgl-content" style="display: table; width: 100%; height: 100%;">
+      <div id="unityContainer"></div>
+    </div>
+      <script>
+    var mywidth = innerWidth;
+    var myheight = innerHeight;
+        document.getElementById("unityContainer").style.width = mywidth + "px";
+        document.getElementById("unityContainer").style.height = myheight + "px";
+    </script>
  
   </body>
 </html>
