--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
     </script>
   </head>
   <body>
-      <div class="webgl-content" style="display: table; width: 100%; height: 100%;">
-      <div id="unityContainer"></div>
-    </div>
-      <script>
-    var mywidth = innerWidth;
-    var myheight = innerHeight;
-        document.getElementById("unityContainer").style.width = mywidth + "px";
-        document.getElementById("unityContainer").style.height = myheight + "px";
-    </script>
+    
+    <div class="webgl-content">
+    <div id="unityContainer" style="width: 300px; height: 600px;"></div>
  
   </body>
 </html>
