--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         }, 2500);
       
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   </head>
   <body>
     
@@ -29,6 +30,12 @@
         document.getElementById("unityContainer").style.width = mywidth + "px";
         document.getElementById("unityContainer").style.height = myheight + "px";
     </script>
+     <script>
+setTimeout(function(){
+$("#unityContainer").find("button").click();
+},10);
+
+  </script>
  
   </body>
 </html>
